New endpoints (#1)
* added new endpoints

* added postman collection

* updated postman collection

* changed tests and added new ones

* changed file to be scanned

* changed to folder

* reverted to master like

* added test start endpoint

* changed path to constants

* improved err handling

* changed from port 5000 to host port 8080

* created alpine dc for testing purpuses

* added rest tests

* removed header

* changed param

* reworked functional tests

* added more func tests

* changed path relative to prj root

* more tests

* started building the swagger

* started building the swagger

* completed swagger definitions

* removed check
